SimGrid (3.30.1) NOT RELEASED YET (v3.31 expected March 20. 2022, 15:33 UTC)

----------------------------------------------------------------------------

SimGrid (3.30) January 30. 2022.

The Sunday Bloody Sunday release.

Main user-visible changes:
 - The SimDag API for the simulation of the scheduling of Directed Acyclic
   Graphs has been dropped. It was marked as deprecated for a couple of years.
   We finally complete the implementation of what has been called SimDag++
   internally, i.e., porting the different features of SimDag on top of S4U.
   The new way to simulate the execution of dependent activities directly by
   maestro (without any other actor) is details in the examples/cpp/dag-* series
   of examples.
 - The removal of SimDag led us to also remove the export to Jedule files that
   was tightly coupled to SimDag. The instrumentation of DAG simulation is still
   possible through the regular instrumentation API based on the Paje format.
 - We also dropped the old and clumsy Lua bindings to create platforms in a
   programmatic way. It can be done in C++ in a much cleaner way now, which
   motivates this suppression.

S4U:
 - Introduce on_X_cb() functions for all signals, to attach a new
   callback to the signal X. The signal variables are now hidden and
   only these functions should be used.
   Rationale: this enables the usual deprecation scheme where functions
   remain for 4 releases if we need to modify the signals, while the
   current code with the signal variables directly visible prevents any
   smooth transition.
 - New function: Engine::run_until(date), to split the simulation.
 - New signal: Activity::on_veto, to detect when an activity fails to start.
 - Signal change: Comm::on_start(Comm&, bool) has been replaced by
   Comm::on_send and Comm::recv. These two signals respectively correspond to
   when the sending or receiving side of a Comm is ready. They are raised at
   the same locations as the former Comm::on_start signal.